# ioscpl

./: .gitignore  mk
client/scripts/: build-android-debug  build-ios-device-debug  build-ios-device-release  build-ios-simulator-debug  build-ios-simulator-release  build-ios-simulator64-debug  build-ios-simulator64-release  clean-all  clean-android  clean-macosx  setup-gtest
client/src/cpp/: CMakeLists.txt  mariocli.cpp
client/src/cpp/aprotocols/: CMakeLists.txt  mwp_bjnp.cpp  mwp_send_tcp_job.hpp
client/src/cpp/core/: CMakeLists.txt  mwp_controller.hpp  mwp_core_api.cpp  mwp_core_api.hpp  mwp_curl_null.cpp  mwp_mq.cpp  mwp_mq.hpp  mwp_printer.cpp  mwp_secure_asset_printing_api.cpp  mwp_stats.cpp  mwp_stats.hpp  mwp_types.cpp  mwp_types.hpp
client/src/cpp/cpl/: cpl_controlled_print_api.cpp
client/src/cpp/objc/: CMakeLists.txt
client/src/cpp/platform/darwin/: mario_sys.cpp  platform_name.cpp
client/src/cpp/platform/ios/: mario_logging.cpp
client/src/cpp/platform/macosx/: mario_sys.cpp
client/src/cpp/platform/windows/: mario_cli.cpp  mario_sys.cpp
client/src/cpp/tests/setup/: test-gmock.cpp
client/src/ios/HPControlledPrint/: .gitignore  HPControlledPrint-Prefix.pch
client/src/ios/HPControlledPrintConsumer/HPControlledPrint.framework/: Info.plist
client/src/ios/HPControlledPrintConsumer/HPControlledPrintConsumer/: Info.plist  NavigationDecider.swift  PrinterListViewController.swift  ServerStackViewController.swift  ValidationTableViewController.swift
client/src/ios/HPControlledPrintConsumer/features/: token_validation.feature
client/src/java/: build.xml
client/src/java/jni/: Android.mk  mobilewebprint-jni.cpp
client/src/platform/android/MobileWebPrintApp/: .gitignore  AndroidManifest.xml  prep_for_mk
client/test_bench/visual_studio/mario/: .gitignore  mario.sln
client/test_bench/visual_studio/mario/mario/: stdafx.cpp
client/tests/: test-client
client/tests/integration/: package.json  sg.js
deliveries/include/: hp_sap.h  mwp_core_api.hpp  mwp_secure_asset_printing_api.hpp
scripts/: build-android  build-android-debug  build-android-release  build-base  build-ios  build-ios-cpl  build-ios-device-debug  build-ios-device-release  build-ios-simulator-debug  build-ios-simulator-release  build-ios-simulator64-debug  build-ios-simulator64-release  build-macosx  build-macosx-workstation-debug  clean-all  clean-android  clean-ios  package  prep-ios-cpl  publish-android  setup-gtest
src/cpp/: CMakeLists.txt
src/cpp/aprotocols/: mwp_bjnp.cpp  mwp_bjnp.hpp  mwp_mdns.cpp  mwp_mdns.hpp  mwp_send_tcp_job.cpp  mwp_send_tcp_job.hpp  mwp_slp.cpp  mwp_slp.hpp  mwp_snmp.cpp  mwp_snmp.hpp  mwp_udp.cpp  mwp_udp.hpp
src/cpp/core/: CMakeLists.txt  hp_mwp.cpp  hp_mwp.h.in  libmario_null.cpp  mwp_args.rl  mwp_assert.cpp  mwp_assert.hpp  mwp_buffer.cpp  mwp_buffer.hpp  mwp_controller.cpp  mwp_controller.hpp  mwp_core_api.cpp  mwp_core_api.hpp  mwp_core_config.h.in  mwp_curl.cpp  mwp_curl.hpp  mwp_curl_null.cpp  mwp_host.hpp  mwp_json.cpp  mwp_json.hpp  mwp_mini_curl.cpp  mwp_mini_curl.hpp  mwp_mq.cpp  mwp_mq.hpp  mwp_printer.cpp  mwp_printer.hpp  mwp_secure_asset_printing_api.cpp  mwp_secure_asset_printing_api.hpp  mwp_socket.cpp  mwp_socket.hpp  mwp_types.cpp  mwp_types.hpp  mwp_upstream.cpp  mwp_upstream.hpp  mwp_utils.cpp  mwp_utils.hpp
src/cpp/cpl/: CMakeLists.txt  cpl_controlled_print_api.cpp  cpl_controlled_print_api.hpp  hp_cpl.cpp
src/cpp/objc/: CMakeLists.txt  mwp_ios_interop.mm  mwp_osx_interop.mm
src/cpp/parsers/: CMakeLists.txt  mwp_uri.rl
src/cpp/platform/android/: android_host.cpp  android_host.hpp  mario_logging.cpp  mario_sys.cpp
src/cpp/platform/base/: mario_sys.cpp
src/cpp/platform/darwin/: darwin_host.cpp  darwin_host.hpp  mario_sys.cpp
src/cpp/platform/ios/: mario_logging.cpp  mario_sys.cpp  platform_name.cpp
src/cpp/platform/macosx/: mario_sys.cpp
src/cpp/platform/posix/: posix_host.cpp  posix_host.hpp
src/cpp/platform/stdio/: mario_cli.cpp
src/cpp/platform/stdio_out_err/: mario_cli.cpp
src/cpp/platform/windows/: mario_sys.cpp
src/cpp/protocols/: CMakeLists.txt  mwp_mdns.cpp  mwp_mdns.hpp  mwp_snmp.cpp  mwp_snmp.hpp
src/cpp/test/: CMakeLists.txt  test.cpp  test_buffer.cpp  test_json.cpp  test_mdns.cpp  test_snmp.cpp  test_utils.cpp
src/cpp/test/data/: mdns2.pcap
src/cpp/tests/setup/: test-gtest.cpp
src/ios/: iOS_SDK_Setup.md
src/ios/HPControlledPrint/: .gitignore
src/ios/HPControlledPrint/HPControlledPrint/: GoogleAnalyticsModel.h  GoogleAnalyticsModel.m  GoogleAnalyticsService.h  GoogleAnalyticsService.m  HPControlledPrint-Prefix.pch  HPControlledPrint.h  Info.plist
src/ios/HPControlledPrint/HPControlledPrint.xcodeproj/: project.pbxproj
src/ios/HPControlledPrint/HPControlledPrintTests/: HPControlledPrintManagerTest.m  HPControlledPrintManagerUtilTest.mm  HPPrintJobRequestTest.m  TempTest.m
src/ios/HPControlledPrintConsumer/HPControlledPrintConsumer/: AppDelegate.swift  ControlledPrint.swift  HPControlledPrint-Bridging-Header.h  Info.plist  PrintJob.swift  PrintViewController.swift  PrinterListViewController.swift  ServerStackViewController.swift  SetupTableViewController.swift  SetupViewController.swift  ValidationTableViewController.swift
src/ios/HPControlledPrintConsumer/HPControlledPrintConsumer.xcodeproj/: project.pbxproj  project.pbxproj.bak
src/ios/HPControlledPrintConsumer/HPControlledPrintConsumerTests/: HPControlledPrintConsumerTests.swift  Info.plist  NavigationDeciderTest.swift
src/java/: .gitignore  AndroidManifest.xml  build.xml
src/java/jni/: Android.mk  Application.mk  mobilewebprint-jni.cpp  mwp-jni.cpp
src/java/src/net/mobilewebprint/: Client.java  (+6 more)
src/platform/android/MobileWebPrintApp/: AndroidManifest.xml  build.xml  prep_for_mk
test_bench/visual_studio/mario/mario/: ReadMe.txt  mario.vcxproj  mario.vcxproj.filters
test_bench/xcode_ios/MarioIOSTestBench/MarioIOSTestBench.xcodeproj/: project.pbxproj
test_bench/xcode_ios/MarioIOSTestBench/MarioIOSTestBenchTests/: Info.plist
tests/integration/: printer.js  test-print-job
toolchain/: FindRAGEL.cmake  iOS.cmake
(+110 files in other folders)
